# Arbitrage

./: .coverage  README.md  donnees.json  pyproject.toml
dossier/: __init__.py  __main__.py  interface_graphique.py  lib_graphe.py
tests/: test_graphe.py  test_integration.py
