[tool.poetry]
name = "dossier"
version = "0.1.0"
description = ""
authors = ["parha <raphael.mercier-2@etu.univ-tours.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
black = "^24.3.0"
ruff = "^0.3.7"
pytest = "^8.1.1"
pyserde = "^0.16.0"
typer = "^0.12.3"
rich = "^13.7.1"
pytest-cov = "^5.0.0"
pathlib = "^1.0.1"
pytest-xdist = "^3.5.0"
mypy = "^1.10.0"
tk = "^0.1.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
